--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     </modules>
 
     <build>
-        <pluginManagement>
+<!--         <pluginManagement>
             <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -29,7 +29,7 @@
                     </configuration>
                 </plugin>
             </plugins>
-        </pluginManagement>
+        </pluginManagement> -->
     </build>
 
     <dependencies>
